log
Wed Oct 14 19:27:04 UTC 2020: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:15: error: unknown type name ‘node’; did you mean ‘Node’?
               node* nuevo=copy(n);
               ^~~~
               Node
sudoku.c:60:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
               node* nuevo=copy(n);
                           ^~~~
sudoku.c:61:15: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
               pushback(lisa,nuevo);
               ^~~~~~~~
               pushBack
sudoku.c:61:24: error: ‘lisa’ undeclared (first use in this function); did you mean ‘lista’?
               pushback(lisa,nuevo);
                        ^~~~
                        lista
sudoku.c:61:24: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:27:14 UTC 2020: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:15: error: unknown type name ‘node’; did you mean ‘Node’?
               node* nuevo=copy(n);
               ^~~~
               Node
sudoku.c:60:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
               node* nuevo=copy(n);
                           ^~~~
sudoku.c:61:15: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
               pushback(lista,nuevo);
               ^~~~~~~~
               pushBack
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:28:18 UTC 2020: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
236ec3f
Wed Oct 14 21:20:27 UTC 2020: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ec7cbef
Wed Oct 14 21:24:25 UTC 2020: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
8fd3ccc
Wed Oct 14 21:24:48 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
7c7ce61
Wed Oct 14 21:25:25 UTC 2020: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9c66ebe
Wed Oct 14 21:25:41 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9e9a6ec
Wed Oct 14 21:25:51 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3793f30
Wed Oct 14 21:27:13 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
06d8d04
Wed Oct 14 21:28:52 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
9031f34
Wed Oct 14 21:31:56 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
1cc45f4
Wed Oct 14 21:33:14 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
835b4a9
Wed Oct 14 21:42:15 UTC 2020: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c287185
Wed Oct 14 21:43:06 UTC 2020: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0355942
Wed Oct 14 22:02:40 UTC 2020: 
 sudoku.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
1f72dd8
Wed Oct 14 22:05:06 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0dea6f8
Wed Oct 14 22:07:37 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
e44fc0a
Wed Oct 14 22:07:50 UTC 2020: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
3759ec6
Wed Oct 14 22:10:23 UTC 2020: 
 sudoku.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  6|2
total_score: 45/70
91f9b06
Wed Oct 14 22:11:02 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
54a7716
Wed Oct 14 22:16:01 UTC 2020: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
9e05f32
Wed Oct 14 22:17:04 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
cfb6acb
Wed Oct 14 22:42:04 UTC 2020: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7ad7eae
Wed Oct 14 22:43:09 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
7db8835
Wed Oct 14 22:48:18 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
02d623d
Wed Oct 14 22:48:34 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
e900433
Wed Oct 14 22:51:07 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
2db897a
Thu Oct 15 00:01:48 UTC 2020: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  7|1
total_score: 55/70
23add0e
Thu Oct 15 00:02:50 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
2841429
Thu Oct 15 00:05:00 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
4ceabb9
Thu Oct 15 00:06:17 UTC 2020: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
59c7f20
Thu Oct 15 00:08:34 UTC 2020: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
b150d90
